fix(Global Styles): add heading styles and custom shadow for improved text visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,3 +40,21 @@ html, body {
   background-color: var(--color-brand-background-global);
   color: var(--color-text-primary);
 }
+
+
+@layer components {
+  .heading-impact {
+    font-family: Impact, "Impact", "Arial Black", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 64px;
+    line-height: 0.82; /* 82% */
+    letter-spacing: 0;
+
+    color: var(--color-text-dark); 
+  }
+
+  .custom-shadow {
+    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+  }
+}
